Fix Alignment

--- a/src/pages/DepartmentHead/Staff/EditUser.css
+++ b/src/pages/DepartmentHead/Staff/EditUser.css
@@ -11,21 +11,21 @@
   z-index: 1000;
 }
 
-.modal-content {
-  background: white;
-  padding: 20px;
-  border-radius: 20px;
-  width: 1000px;
-  max-width: 90%;
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-  position: fixed;
-  text-align: center;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-  right: 350px;
-  top: 100px;
-  transform: translateY(40%);
-  height: 600px; 
-}
+  .modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 20px;
+    width: 1000px;
+    max-width: 90%;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    text-align: center;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    right: 350px;
+    top: 30px;
+    transform: translateY(40%);
+    height: 600px; 
+  }
 
   .close-button {
     position: absolute;
@@ -40,6 +40,7 @@
   .close-button:hover {
     color: #333;
   }
+ 
   
   .form-container {
     display: flex;
@@ -50,13 +51,12 @@
     border: none;
     box-shadow: none;
     background: transparent;
-}
+} 
 
 .form-group {
   display: flex;
   flex-direction: column; 
-  gap: 0px; 
-  margin-bottom: 0px; 
+  padding-top: -50px; 
   
 }
 
@@ -64,7 +64,7 @@
   display: flex;
   flex-direction: column;
   width: 48%; 
-  gap: 0px;
+
 }
 
 .credentials-column {
@@ -84,6 +84,7 @@
 .form-group label {
   text-align: left;
   display: block; 
+
 }
 
 @media (max-width: 600px) {
